Create marking ksat oracle

--- a/configproblem/SolvingSATWithGrover.ipynb
+++ b/configproblem/SolvingSATWithGrover.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10ba4354",
+   "id": "cce91eee",
    "metadata": {},
    "source": [
     "# Solving SAT With Grover\n",
@@ -19,11 +19,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90246474",
+   "id": "c3704801",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit.quantum_info.operators import Operator\n",
+    "from qiskit import QuantumCircuit\n",
     "\n",
     "## Define Basic Matrices\n",
     "I = Operator([[1,0],[0,1]])\n",
@@ -36,9 +37,8 @@
     "        unitary = unitary.tensor(I)\n",
     "    return unitary\n",
     "\n",
-    "def marking_and_oracle(nInputRegister):\n",
+    "def marking_and_oracle(nqubits):\n",
     "    \"\"\"Returns a matrix representation of the and oracle\"\"\"\n",
-    "    nqubits = nInputRegister+1;\n",
     "    unitary = sized_identity(nqubits)\n",
     "    \n",
     "    # Apply the x gate to the output register\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e79ae08",
+   "id": "5e2d9404",
    "metadata": {},
    "source": [
     "### Or"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e8be81c",
+   "id": "03331ce6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,17 +71,16 @@
     "        unitary = unitary.tensor(X)\n",
     "    return unitary\n",
     "\n",
-    "def marking_or_oracle(nInputRegisters):\n",
+    "def marking_or_oracle(nqubits):\n",
     "    \"\"\"Returns a matrix representation of the or oracle\"\"\"\n",
-    "    nqubits = nInputRegisters+1\n",
-    "    unitary = sized_x(nqubits).dot(marking_and_oracle(nInputRegisters))\n",
-    "    unitary = unitary.dot(sized_x(nInputRegisters).tensor(I))\n",
+    "    unitary = sized_x(nqubits).dot(marking_and_oracle(nqubits))\n",
+    "    unitary = unitary.dot(sized_x(nqubits-1).tensor(I))\n",
     "    return unitary"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "53ddda31",
+   "id": "1a764b24",
    "metadata": {},
    "source": [
     "While we could go on further and create _XOR_ and _AlternatingBits_ oracles but we don't need them for now so let's not :)\n",
@@ -97,19 +96,122 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f292ba2",
+   "id": "9b92c084",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "def marking_clause_oracle(qubits: [int], target: int, clause: [(int,bool)]):\n",
-    "    nqubits = len(qubits) + target\n",
-    "    unitary = sized_identity(nqubits)\n",
+    "    nqubits = len(qubits) + 1\n",
+    "    qc = QuantumCircuit(nqubits)\n",
     "    # Flip input qubits\n",
     "    for index, positive in clause:\n",
     "        if not positive:\n",
-    "            unitary = unitary.\n",
-    "            "
+    "            qc.x(index)\n",
+    "            \n",
+    "    # Get Clause Qubits\n",
+    "    clause_qubits = [i for i, _ in clause]\n",
+    "    \n",
+    "    # Create an Oracle for n qubits\n",
+    "    nqubits_or = len(clause_qubits) + 1  # +1 for target qubit\n",
+    "    or_oracle = marking_or_oracle(nqubits_or)\n",
+    "    or_qc = QuantumCircuit(nqubits_or)\n",
+    "    or_qc.unitary(or_oracle, range(nqubits_or), \"or_oracle\")\n",
+    "    # compose list maps the qubits linearly (0,1,2,3...) on the given target list\n",
+    "    clause_qubits.append(target)\n",
+    "    return qc.compose(or_qc, clause_qubits)\n",
+    "#     return or_qc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427d729f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Debug Clause Oracle\n",
+    "clause_circuit = marking_clause_oracle(range(5), 5, [(1, True),(3, False),(4, True)])\n",
+    "clause_circuit.draw(output=\"mpl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0ff5b11",
+   "metadata": {},
+   "source": [
+    "### k-SAT Oracle\n",
+    "Using our single clause oracle, we can take their conjunction and create a marking oracle for the entire expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9590703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def marking_ksat_oracle(qubits: [int], target: int, clauses: [[(int, bool)]]):\n",
+    "    auxiliary_qc = QuantumCircuit(len(clauses)) # Each clause output needs to be stored in aux\n",
+    "    qc = QuantumCircuit(len(qubits) + 1 + len(clauses))  # +1 for overall target\n",
+    "    \n",
+    "    # Compose individual clauses\n",
+    "    for idx, clause in enumerate(clauses):\n",
+    "        aux_idx = len(qubits) + idx\n",
+    "        one_clause_qc = marking_clause_oracle(qubits, len(qubits), clause)\n",
+    "        qbit_map = list(qubits)\n",
+    "        qbit_map.append(aux_idx)\n",
+    "        qc = qc.compose(one_clause_qc, qbit_map)\n",
+    "        \n",
+    "    # And the auxiliary registers\n",
+    "    nqubits_and = len(clauses) + 1\n",
+    "    and_oracle = marking_and_oracle(nqubits_and)\n",
+    "    and_qc = QuantumCircuit(nqubits_and)\n",
+    "    and_qc.unitary(and_oracle, range(nqubits_and), \"and_oracle\")\n",
+    "    \n",
+    "    # Compose the and oracle\n",
+    "    and_qc_map = [idx+len(qubits) for idx in range(len(clauses)+1)]\n",
+    "    # TODO Return auxiliary qubits to |0> State?\n",
+    "    return qc.compose(and_qc, and_qc_map)\n",
+    "\n",
+    "def ksat_for_problem(problem):\n",
+    "    nqubits_aux = len(problem) # one for each clause\n",
+    "    nqubit_in = max([i for c in problem for i, _ in c]) + 1\n",
+    "    problem_qc = marking_ksat_oracle(range(nqubit_in), nqubit_in+nqubits_aux+1, problem)\n",
+    "    return problem_qc\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c304fcfd",
+   "metadata": {},
+   "source": [
+    "**DONE** We can now formulate a SAT problem and create a marking oracle for it!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75a3b587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# f(x) = (x1 + !x3 + x4) * (x0 + !x2)\n",
+    "problem = [[(1, True),(3, False),(4, True)],\n",
+    "          [(0, True),(2, False)]]\n",
+    "problem_circuit = ksat_for_problem(problem)\n",
+    "problem_circuit.draw(output=\"mpl\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8abce7de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
