Finish SAT Grover Oracle
Also bump qiskit version to 0.37

--- a/configproblem/SolvingSATWithGrover.ipynb
+++ b/configproblem/SolvingSATWithGrover.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cce91eee",
+   "id": "ead2cbc8",
    "metadata": {},
    "source": [
     "# Solving SAT With Grover\n",
@@ -19,12 +19,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3704801",
+   "id": "52ca2a43",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit.quantum_info.operators import Operator\n",
-    "from qiskit import QuantumCircuit\n",
+    "from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister\n",
     "\n",
     "## Define Basic Matrices\n",
     "I = Operator([[1,0],[0,1]])\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e2d9404",
+   "id": "c832fd6b",
    "metadata": {},
    "source": [
     "### Or"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03331ce6",
+   "id": "c15b61de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,12 +80,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a764b24",
+   "id": "0476a398",
    "metadata": {},
    "source": [
     "While we could go on further and create _XOR_ and _AlternatingBits_ oracles but we don't need them for now so let's not :)\n",
     "\n",
-    "## SAT Oracles\n",
+    "## SAT Marking Oracles\n",
     "Using our marking gate-oracles, we can create oracles for evaluating SAT clauses and finally complete functions.\n",
     "\n",
     "### Single Clause Oracle\n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b92c084",
+   "id": "c1479873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +120,19 @@
     "    or_qc.unitary(or_oracle, range(nqubits_or), \"or_oracle\")\n",
     "    # compose list maps the qubits linearly (0,1,2,3...) on the given target list\n",
     "    clause_qubits.append(target)\n",
-    "    return qc.compose(or_qc, clause_qubits)\n",
-    "#     return or_qc"
+    "    qc = qc.compose(or_qc, clause_qubits)\n",
+    "    \n",
+    "    # Inverse the initial Flips\n",
+    "    for index, positive in clause:\n",
+    "        if not positive:\n",
+    "            qc.x(index)\n",
+    "    return qc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "427d729f",
+   "id": "bbf077cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ff5b11",
+   "id": "5962e20a",
    "metadata": {},
    "source": [
     "### k-SAT Oracle\n",
@@ -148,13 +153,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9590703",
+   "id": "b777fed3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def marking_ksat_oracle(qubits: [int], target: int, clauses: [[(int, bool)]]):\n",
     "    auxiliary_qc = QuantumCircuit(len(clauses)) # Each clause output needs to be stored in aux\n",
-    "    qc = QuantumCircuit(len(qubits) + 1 + len(clauses))  # +1 for overall target\n",
+    "    qreg_in = QuantumRegister(size=len(qubits), name=\"q_in\")\n",
+    "    qreg_an = AncillaRegister(size=len(clauses), name=\"q_an\")\n",
+    "    qreg_target = QuantumRegister(size=1, name=\"q_target\")\n",
+    "    \n",
+    "    qc = QuantumCircuit(qreg_in, qreg_an, qreg_target)\n",
     "    \n",
     "    # Compose individual clauses\n",
     "    for idx, clause in enumerate(clauses):\n",
@@ -163,7 +172,10 @@
     "        qbit_map = list(qubits)\n",
     "        qbit_map.append(aux_idx)\n",
     "        qc = qc.compose(one_clause_qc, qbit_map)\n",
-    "        \n",
+    "    \n",
+    "    # Store the conjugate transpose (inverse) for later qubit cleanup\n",
+    "    inverse_qc = qc.inverse()\n",
+    "    \n",
     "    # And the auxiliary registers\n",
     "    nqubits_and = len(clauses) + 1\n",
     "    and_oracle = marking_and_oracle(nqubits_and)\n",
@@ -172,8 +184,9 @@
     "    \n",
     "    # Compose the and oracle\n",
     "    and_qc_map = [idx+len(qubits) for idx in range(len(clauses)+1)]\n",
-    "    # TODO Return auxiliary qubits to |0> State?\n",
-    "    return qc.compose(and_qc, and_qc_map)\n",
+    "    ksat_qc = qc.compose(and_qc, and_qc_map)\n",
+    "    # Apply the inversion to the circuit\n",
+    "    return ksat_qc.compose(inverse_qc)\n",
     "\n",
     "def ksat_for_problem(problem):\n",
     "    nqubits_aux = len(problem) # one for each clause\n",
@@ -185,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c304fcfd",
+   "id": "68bf5f17",
    "metadata": {},
    "source": [
     "**DONE** We can now formulate a SAT problem and create a marking oracle for it!"
@@ -194,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75a3b587",
+   "id": "224fa5a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,13 +215,43 @@
     "problem = [[(1, True),(3, False),(4, True)],\n",
     "          [(0, True),(2, False)]]\n",
     "problem_circuit = ksat_for_problem(problem)\n",
-    "problem_circuit.draw(output=\"mpl\")\n"
+    "problem_circuit.draw(output=\"mpl\", justify=\"left\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bccd06b0",
+   "metadata": {},
+   "source": [
+    "## Converting the oracles into phase oracles for Grover"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8abce7de",
+   "id": "c75a1ce0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def phase_oracle(problem_oracle, target_idx):\n",
+    "    qc_conv = QuantumCircuit(1, name=\"Mark2Phase\")\n",
+    "    qc_conv.x(0)\n",
+    "    qc_conv.h(0)\n",
+    "    # Prepend the phase transformation\n",
+    "    problem_oracle = problem_oracle.compose(qc_conv, qubits=[target_idx], front=True)\n",
+    "    # Append the phase transformation \n",
+    "    problem_oracle = problem_oracle.compose(qc_conv.inverse(), qubits=[target_idx])\n",
+    "    \n",
+    "    return problem_oracle\n",
+    "\n",
+    "phase_problem_circuit = phase_oracle(problem_circuit, -1)\n",
+    "phase_problem_circuit.draw(output=\"mpl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee1d7c22",
    "metadata": {},
    "outputs": [],
    "source": []
