Implement SAT Example (buggy)

--- a/configproblem/SolvingSATWithGrover.ipynb
+++ b/configproblem/SolvingSATWithGrover.ipynb
@@ -24,7 +24,8 @@
    "outputs": [],
    "source": [
     "from qiskit.quantum_info.operators import Operator\n",
-    "from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister\n",
+    "from qiskit import QuantumCircuit, QuantumRegister, AncillaRegister, ClassicalRegister\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "## Define Basic Matrices\n",
     "I = Operator([[1,0],[0,1]])\n",
@@ -100,8 +101,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "def marking_clause_oracle(qubits: [int], target: int, clause: [(int,bool)]):\n",
     "    nqubits = len(qubits) + 1\n",
     "    qc = QuantumCircuit(nqubits)\n",
@@ -249,9 +248,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "752eee7d",
+   "metadata": {},
+   "source": [
+    "# Plugging Oracles into Grover\n",
+    "As we can now create phase oracles, we can model a complete grover loop.\n",
+    "\n",
+    "1. Make oracle: ksat_for_problem(...) & phase_oracle(...)\n",
+    "2. Add classical registers for output measurements\n",
+    "3. Create uniform superposition over q_in (an & target stay |0>)\n",
+    "4. Grover Loop (k-times? correctness-check?)\n",
+    "    1. Append Phase_Oracle over all q registers\n",
+    "    2. Append Grover Diffuser over all q registers\n",
+    "5. Measure q_in into classical registers and check solution (histogram)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee1d7c22",
+   "id": "03853f32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_diffuser(nqubits):\n",
+    "    qc = QuantumCircuit(nqubits)\n",
+    "    # Apply transformation |s> -> |00..0> (H-gates)\n",
+    "    for qubit in range(nqubits):\n",
+    "        qc.h(qubit)\n",
+    "    # Apply transformation |00..0> -> |11..1> (X-gates)\n",
+    "    for qubit in range(nqubits):\n",
+    "        qc.x(qubit)\n",
+    "    # Do multi-controlled-Z gate\n",
+    "    qc.h(nqubits-1)\n",
+    "    qc.mct(list(range(nqubits-1)), nqubits-1)  # multi-controlled-toffoli\n",
+    "    qc.h(nqubits-1)\n",
+    "    # Apply transformation |11..1> -> |00..0>\n",
+    "    for qubit in range(nqubits):\n",
+    "        qc.x(qubit)\n",
+    "    # Apply transformation |00..0> -> |s>\n",
+    "    for qubit in range(nqubits):\n",
+    "        qc.h(qubit)\n",
+    "    # We will return the diffuser as a gate\n",
+    "    U_s = qc.to_gate()\n",
+    "    U_s.name = \"U$_{Diffuser}$\"\n",
+    "    return U_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1901d48e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input:\n",
+    "# f(x) = (x0 + !x1) * (x2) * (x1) {FTT, TTT}\n",
+    "problem = [[(0, True), (1, False)], [(2, True)], [(1, True)]]\n",
+    "\n",
+    "marking_oracle = ksat_for_problem(problem)\n",
+    "phase_problem_qc = phase_oracle(marking_oracle, -1)\n",
+    "oracle_gate = phase_problem_qc.to_gate(label=\"SAT_Oracle\")\n",
+    "num_var = phase_problem_qc.num_qubits-phase_problem_qc.num_ancillas\n",
+    "\n",
+    "diffuser = create_diffuser(num_var-1)\n",
+    "\n",
+    "# Construct Main Quantum Circuit\n",
+    "main_qc = phase_problem_qc.copy_empty_like()\n",
+    "creg = ClassicalRegister(num_var, name=\"c\")\n",
+    "main_qc.add_register(creg)\n",
+    "\n",
+    "# main_qc.draw(output=\"mpl\", justify=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cb509ff",
+   "metadata": {},
+   "source": [
+    "(3.) Create uniform superposition over input qubits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd920bf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_s(qc, qubits):\n",
+    "    \"\"\"Apply a H-gate to 'qubits' in qc\"\"\"\n",
+    "    for q in qubits:\n",
+    "        qc.h(q)\n",
+    "    return qc\n",
+    "\n",
+    "main_qc = initialize_s(main_qc, range(num_var-1))\n",
+    "# main_qc.h(-1)\n",
+    "\n",
+    "# main_qc.draw(output=\"mpl\", justify=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d319782b",
+   "metadata": {},
+   "source": [
+    "(4.) Grover Loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "294a5d11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO find k\n",
+    "k=1\n",
+    "\n",
+    "# Add the oracle-diffusor step k times\n",
+    "for i in range(k):\n",
+    "    main_qc.append(oracle_gate, range(main_qc.num_qubits))\n",
+    "    register_map = list(range(num_var-1))\n",
+    "    # register_map.append(-1) # target\n",
+    "    main_qc = main_qc.compose(diffuser, register_map)\n",
+    "    \n",
+    "# Measure Inputs and Target\n",
+    "for i, c in enumerate(creg):\n",
+    "    if i < len(creg)-1:\n",
+    "        main_qc.measure(i, c) # measure inputs\n",
+    "#     else:\n",
+    "#         main_qc.measure(-1, c) # measure target, if 0 the results are trash\n",
+    "\n",
+    "# Reapply Marking Oracle for correctness check\n",
+    "qreg_out = QuantumRegister(size=1, name=\"q_out\")\n",
+    "main_qc.add_register(qreg_out)\n",
+    "marking_out_map = list(range(num_var+main_qc.num_ancillas-1))\n",
+    "marking_out_map.append(-1)\n",
+    "main_qc = main_qc.compose(marking_oracle, marking_out_map)\n",
+    "main_qc.measure(-1, -1) # measure q_out into last classical register\n",
+    "\n",
+    "main_qc.draw(output=\"mpl\", justify=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "511d16cd",
+   "metadata": {},
+   "source": [
+    "The Quantum Circuit is completed! Simulate it!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76689a4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit import Aer, transpile\n",
+    "from qiskit.visualization import plot_histogram\n",
+    "\n",
+    "qasm_sim = Aer.get_backend('qasm_simulator')\n",
+    "transpiled_grover_circuit = transpile(main_qc, qasm_sim)\n",
+    "results = qasm_sim.run(transpiled_grover_circuit).result()\n",
+    "counts = results.get_counts()\n",
+    "histogram = plot_histogram(counts)\n",
+    "histogram # For display purposes in jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18f6bcf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DMACS\n",
+    "problem_dmacs = \"c problem dmacs\\np cnf 3 2\\n1 -2 0\\n3 0\"\n",
+    "\n",
+    "from qiskit.circuit.library import PhaseOracle\n",
+    "import numpy as np\n",
+    "np.set_printoptions(threshold=np.inf)\n",
+    "\n",
+    "import qiskit.quantum_info as qi\n",
+    "op = qi.Operator(phase_problem_qc)\n",
+    "print(op.data.real)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0cb59c2",
    "metadata": {},
    "outputs": [],
    "source": []
