Average hamiltonian energy

--- a/configproblem/MinCostSAT_QAOA.ipynb
+++ b/configproblem/MinCostSAT_QAOA.ipynb
@@ -295,7 +295,7 @@
    "outputs": [],
    "source": [
     "# QAOA Using Optimizer\n",
-    "from scipy.optimize import minimize\n",
+    "from scipy.optimize import minimize, basinhopping\n",
     "\n",
     "def compute_hamiltonian_energy(hamiltonian, counts):\n",
     "    def compute_config_energy(config: str):\n",
@@ -312,14 +312,25 @@
     "            else:\n",
     "                energy += factor * config[q1-1] * config[q2-1]\n",
     "\n",
-    "        # print(config, energy)\n",
     "        return energy\n",
     "    \n",
-    "    # take the config that was measured most often\n",
-    "    config_str = max(counts, key=counts.get) \n",
-    "    # convert the 0/1 feature string to ising integers\n",
-    "    config = [-1 if s == \"0\" else 1 for s in config_str]\n",
-    "    return compute_config_energy(config)\n",
+    "    # # take the config that was measured most often\n",
+    "    # config_str = max(counts, key=counts.get) \n",
+    "    # # convert the 0/1 feature string to ising integers\n",
+    "    # config = [-1 if s == \"0\" else 1 for s in config_str]\n",
+    "    # return compute_config_energy(config)\n",
+    "\n",
+    "    average_energy = 0\n",
+    "    for config_str in counts.keys():\n",
+    "        config = [-1 if s == \"0\" else 1 for s in config_str]\n",
+    "        energy = compute_config_energy(config)*counts.get(config_str)\n",
+    "\n",
+    "        # print(config, counts.get(config_str), energy)\n",
+    "        average_energy += energy\n",
+    "\n",
+    "    average_energy /= counts.shots()\n",
+    "    print(\"Average:\", average_energy)\n",
+    "    return average_energy\n",
     "    \n",
     "\n",
     "\n",
@@ -344,23 +355,24 @@
     "# inputs\n",
     "# hamiltonian = [(factor, q1, q2)]\n",
     "feetcost_hamiltonian = [\n",
-    "    (182.5, None, None),\n",
-    "    (10, 1, None),\n",
-    "    (25, 1, 2),\n",
-    "    (15, 2, None),\n",
+    "    (1000082.5, None, None),\n",
+    "    (249985.0, 1, None),\n",
+    "    (250000.0, 1, 2),\n",
+    "    (249990.0, 2, None),\n",
     "    (-12.5, 3, None),\n",
-    "    (50, 3, 4),\n",
+    "    (500000.0, 3, 4),\n",
     "    (-25, 4, None),\n",
-    "    (-40, 5, None),\n",
-    "    (-25, 5, 6),\n",
-    "    (20, 6, None)\n",
+    "    (-250015.0, 5, None),\n",
+    "    (-250000.0, 5, 6),\n",
+    "    (249995.0, 6, None)\n",
     "]\n",
     "layers = 1 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "nfeatures = 6\n",
     "\n",
     "\n",
     "expectation = get_expectation(feetcost_hamiltonian, nfeatures, layers, 128)\n",
-    "res = minimize(expectation, [1, 1], method='COBYLA', tol=1e-12)\n",
+    "res = minimize(expectation, [1, 1], method='BFGS', tol=1e-12)\n",
+    "# res = basinhopping(expectation, [1, 1])\n",
     "\n",
     "print(res)\n",
     "\n",
@@ -437,7 +449,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 1000\n",
+    "alpha_sat = 1000000\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
@@ -458,7 +470,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('tva-configuration-problem')",
    "language": "python",
    "name": "python3"
   },
@@ -472,7 +484,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d3514f4bb63f5ef06960f249eaf871d4155ba26850e795a4551f45f075b9fcda"
+   }
   }
  },
  "nbformat": 4,
