Add statevector calc to grovers and warmstart qaoa

--- a/configproblem/MinCostSAT_QAOA.ipynb
+++ b/configproblem/MinCostSAT_QAOA.ipynb
@@ -235,8 +235,15 @@
    "outputs": [],
    "source": [
     "# QAOA Circuit\n",
-    "def qaoa_circuit(hamiltonian, nqubits, nlayers) -> QuantumCircuit:\n",
-    "    qc = superposition_circuit(nqubits)\n",
+    "def qaoa_circuit(hamiltonian, nqubits, nlayers, amplitude_vector=None) -> QuantumCircuit:\n",
+    "    if amplitude_vector is not None:\n",
+    "        # warm start\n",
+    "        qc = QuantumCircuit(nqubits) \n",
+    "        qc.initialize(amplitude_vector)\n",
+    "    else:\n",
+    "        # equal superposition\n",
+    "        qc = superposition_circuit(nqubits)\n",
+    "        \n",
     "    \n",
     "    qg_mixer, beta = mixer_circuit(nqubits)\n",
     "#     qg_mixer.name = \"Mixer\"\n",
@@ -266,8 +273,8 @@
    "outputs": [],
    "source": [
     "# QAOA Procedure\n",
-    "def quantum(hamiltonian, nqubits, layers, beta_val, gamma_val, shots=512):\n",
-    "    qc, beta, gamma = qaoa_circuit(hamiltonian, nqubits, layers)\n",
+    "def quantum(hamiltonian, nqubits, layers, beta_val, gamma_val, shots=512, amplitude_vector=None):\n",
+    "    qc, beta, gamma = qaoa_circuit(hamiltonian, nqubits, layers, amplitude_vector)\n",
     "        \n",
     "    # Set parameters for qc\n",
     "    qc = qc.bind_parameters({\n",
@@ -329,17 +336,17 @@
     "        average_energy += energy\n",
     "\n",
     "    average_energy /= counts.shots()\n",
-    "    print(\"Average:\", average_energy)\n",
+    "    # print(\"Average:\", average_energy)\n",
     "    return average_energy\n",
     "    \n",
     "\n",
     "\n",
-    "def get_expectation(hamiltonian, nqubits, nlayers, shots=128):\n",
+    "def get_expectation(hamiltonian, nqubits, nlayers, shots=128, amplitude_vector=None):\n",
     "    backend = Aer.get_backend('qasm_simulator')\n",
     "    backend.shots = shots\n",
     "    \n",
     "    def execute_circ(theta):\n",
-    "        qc, beta, gamma = qaoa_circuit(hamiltonian, nqubits, nlayers)\n",
+    "        qc, beta, gamma = qaoa_circuit(hamiltonian, nqubits, nlayers, amplitude_vector)\n",
     "        \n",
     "        # Set parameters for qc\n",
     "        qc = qc.bind_parameters({\n",
@@ -366,6 +373,23 @@
     "    (-250000.0, 5, 6),\n",
     "    (249995.0, 6, None)\n",
     "]\n",
+    "\n",
+    "# warmstart array\n",
+    "warmstart_statevector = \\\n",
+    "      [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+    "       0.232379  , 0.28809721, 0.20976177, 0.        , 0.25298221,\n",
+    "       0.19493589, 0.24899799, 0.        , 0.        , 0.        ,\n",
+    "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+    "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+    "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+    "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+    "       0.        , 0.        , 0.20976177, 0.17888544, 0.23021729,\n",
+    "       0.        , 0.24899799, 0.23664319, 0.29664794, 0.        ,\n",
+    "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+    "       0.        , 0.        , 0.        , 0.23021729, 0.24083189,\n",
+    "       0.26267851, 0.        , 0.232379  , 0.20248457, 0.20736441,\n",
+    "       0.04472136, 0.        , 0.        , 0.        ]\n",
+    "\n",
     "layers = 1 # more layers = higher approximation rate but more quantum errors when running on real qpu\n",
     "nfeatures = 6\n",
     "\n",
@@ -388,7 +412,6 @@
    "outputs": [],
    "source": [
     "# Pretty Print the results of the previous Cell\n",
-    "from matplotlib.container import BarContainer\n",
     "\n",
     "best_config = \"000110\" # 654321\n",
     "valid_configs = [\"101010\", \"101001\", \"101011\", \"100110\", \"100101\", \"100111\", \"001010\", \"001001\", \"001011\", \"000101\", \"000111\", \"111010\", \"111001\", \"111011\", \"110110\", \"110101\", \"110111\"]\n",
@@ -449,7 +472,7 @@
     "x1, x2, x3, x4, x5, x6 = boolean_var('x1'), boolean_var('x2'), boolean_var('x3'), boolean_var('x4'), boolean_var('x5'), boolean_var('x6')\n",
     "\n",
     "# SAT Penalty\n",
-    "alpha_sat = 1000000\n",
+    "alpha_sat = 1e3\n",
     "\n",
     "# SAT QUBO\n",
     "sat_model = alpha_sat * (2 - x1 - x2 - x3 - x4 + x5 + x1 * x2 + 2 * x3 * x4 - x5 * x6)\n",
@@ -470,7 +493,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('tva-configuration-problem')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -484,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
