--- a/configproblem/SolvingSATWithGrover.ipynb
+++ b/configproblem/SolvingSATWithGrover.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.circuit import Qubit, QuantumRegister, AncillaRegister, QuantumCircuit, Gate\n",
+    "from qiskit.circuit import Qubit, QuantumRegister, AncillaRegister, QuantumCircuit, Gate, ClassicalRegister\n",
     "from qiskit.quantum_info import Operator\n",
     "\n",
     "from typing import Dict, List, Tuple\n",
@@ -360,7 +360,8 @@
     "    qc_phase_oracle = oracle_converter(qc_oracle, len(inp_reg))\n",
     "\n",
     "    # Construct main quantum circuit\n",
-    "    main_qc = QuantumCircuit(inp_reg, tar_reg, ancilla_reg)\n",
+    "    c_regs = ClassicalRegister(num_vars, 'c')\n",
+    "    main_qc = QuantumCircuit(inp_reg, tar_reg, ancilla_reg, c_regs)\n",
     "\n",
     "    # Create uniform superposition\n",
     "    main_qc = initialize_s(main_qc, range(num_vars))\n",
@@ -413,6 +414,9 @@
     "    for i in range(k):\n",
     "        main_qc.append(phase_oracle_gate, range(num_qubits))\n",
     "        main_qc = main_qc.compose(diff, register_map)\n",
+    "        \n",
+    "    # Add measurements of input qubits\n",
+    "    main_qc.measure(register_map, register_map)\n",
     "    \n",
     "    return (main_qc, qc_oracle)"
    ]
@@ -429,6 +433,7 @@
     "\n",
     "# Create the circuit\n",
     "main_qc, qc_oracle = create_ksat_grover(problem, k)\n",
+    "\n",
     "\n",
     "main_qc.draw(output=\"mpl\", justify=\"left\")"
    ]
@@ -453,19 +458,104 @@
     "from qiskit.providers.aer import StatevectorSimulator\n",
     "\n",
     "transpiled_grover_circuit = transpile(main_qc, StatevectorSimulator())\n",
-    "results = StatevectorSimulator().run(transpiled_grover_circuit).result()\n",
+    "results = StatevectorSimulator().run(transpiled_grover_circuit, shots=1000).result()\n",
     "counts = results.get_counts()\n",
     "histogram = plot_histogram(counts, figsize=(40, 10))\n",
     "histogram # For display purposes in jupyter"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4777e701",
+   "metadata": {},
+   "source": [
+    "## Warmstarting other Quantum circuits\n",
+    "If we want to use this result to warmstart other quantum circuits, we need the list of complex amplitudes of that statevector!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2447f25e",
+   "id": "0dae44c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "np.set_printoptions(threshold=1e6)\n",
+    "\n",
+    "# Get the statevector from counts.\n",
+    "def calc_statevector_from(counts: {}, width=None):\n",
+    "    threshold = max(counts.values())/1e2 # one order of magnitude below the most often measured results\n",
+    "    count_vector = []\n",
+    "    shots = 0 # measured shots\n",
+    "    \n",
+    "    # derive width from counts if not given\n",
+    "    if width is None:\n",
+    "        width = len(list(counts.keys()))\n",
+    "    \n",
+    "    # create statevector by using counts\n",
+    "    for i in range(2**width):\n",
+    "        b = format(i, f\"0{width}b\")\n",
+    "        c = counts.get(b)\n",
+    "        # print(i, b, c)\n",
+    "        if c is None:\n",
+    "            count_vector.append(0)\n",
+    "        else:\n",
+    "            count_vector.append(c)\n",
+    "            shots += c\n",
+    "            \n",
+    "    # TODO do we need to reverse the list because of lsb ordering?\n",
+    "    \n",
+    "    # normalize vector\n",
+    "    count_arr = np.array(count_vector)\n",
+    "    norm_vector = count_arr / count_arr.sum()\n",
+    "    \n",
+    "    # sqrt vector\n",
+    "    statevector = np.sqrt(norm_vector)\n",
+    "    return statevector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91b68728",
+   "metadata": {},
+   "source": [
+    "This function can be used to calculate a statevector from a set of measurements!\n",
+    "Now double check that this vector yields the same result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f441ff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_vars = 6 # restrict to 6 qubits because we don't care about our ancillas\n",
+    "manual_statevector = calc_statevector_from(counts, num_vars)\n",
+    "print(repr(manual_statevector))\n",
+    "\n",
+    "qc_vec = QuantumCircuit(QuantumRegister(num_vars), ClassicalRegister(num_vars))\n",
+    "qc_vec.initialize(manual_statevector)\n",
+    "qc_vec.measure(list(range(num_vars)), list(range(num_vars)))\n",
+    "qc_vec.draw(output=\"mpl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1cec956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transpiled_vec_circuit = transpile(qc_vec, StatevectorSimulator())\n",
+    "print(f\"Circuit Depth: {transpiled_vec_circuit.depth()}\")\n",
+    "results = StatevectorSimulator().run(transpiled_vec_circuit, shots=1000).result()\n",
+    "counts = results.get_counts()\n",
+    "histogram = plot_histogram(counts, figsize=(40, 10))\n",
+    "histogram # For display purposes in jupyter"
+   ]
   }
  ],
  "metadata": {
@@ -484,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
